<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_toy_in_stock"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/name_toy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:textSize="15sp"
        android:hint="@string/enter_the_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/quantity_toy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:textSize="15sp"
        android:hint="@string/enter_the_number"
        android:inputType="number" />

    <EditText
        android:id="@+id/winning_frequency_toy"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints="text"
        android:textSize="15sp"
        android:hint="@string/probability_of_falling_out_of_the_toy"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/button_save_added_toy"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"/>

        <Button
            android:id="@+id/button_cancel"
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"/>

    </LinearLayout>


</LinearLayout>